# Ambient-BetterBrightness

./: CMakeLists.txt  README.md  gamepwnage.cmake  main.cpp  stub.h
.github/workflows/: build.yml
gamepwnage/includes/: armhook.h  config.h  inlinehook.h  mem.h  memscan.h  nop.h  plthook.h  proc.h
gamepwnage/src/: armhook.c  inlinehook.c  mem.c  memscan.c  nop.c  plthook.c  proc.c
